--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -7,4 +7,18 @@
     <string name="join_cluster">加入分享组</string>
     <string name="img_waterfall">照片瀑布</string>
     <string name="my_clusters">我的分享组</string>
+    <string name="hello_blank_fragment">你好空分裂</string>
+    <string name="title_activity_login">登录</string>
+    <string name="prompt_email">电子邮箱</string>
+    <string name="prompt_password">密码</string>
+    <string name="action_sign_in">登录或注册</string>
+    <string name="action_sign_in_short">登录</string>
+    <string name="error_invalid_email">该电子邮箱地址有问题</string>
+    <string name="error_invalid_password">该密码太短</string>
+    <string name="error_incorrect_password">该密码不正确</string>
+    <string name="error_field_required">这是必需字段</string>
+    <string name="permission_rationale">获取电子邮箱需要通讯录权限</string>
+    <string name="title_activity_sign_up">注册</string>
+    <string name="login_hint">请先登录</string>
+    <string name="add_comment">评论该图</string>
 </resources>
