--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="img_waterfall">Image Waterfall</string>
     <string name="my_clusters">My Clusters</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_login">Sign in</string>
 
@@ -25,4 +24,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_sign_up">Register</string>
+    <string name="login_hint">Please login</string>
+    <string name="add_comment">Add Comment</string>
 </resources>
